# drf-auth

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
accounts/: admin.py  forms.py  models.py
accounts/migrations/: 0001_initial.py
drf_auth/: settings.py  urls.py
